Updates solution.cpp & tutorial.md, TODO update input size and test cases.

--- a/tecnomate_2025/libres/palabra_clave/test_cases/1.in
+++ b/tecnomate_2025/libres/palabra_clave/test_cases/1.in
@@ -1,3 +1,274 @@
-2
-ANARAP
-FRUTAFRESCA
+273
+A
+AA
+AB
+AAA
+ABA
+AAB
+ABB
+AAC
+ABC
+AAAA
+ABAA
+AABA
+ABBA
+AACA
+ABCA
+AAAB
+ABAB
+AABB
+ABBB
+AACB
+ABCB
+AAAC
+ABAC
+AABC
+ABBC
+AACC
+ABCC
+AAAD
+ABAD
+AABD
+ABBD
+AACD
+ABCD
+AAAAA
+ABAAA
+AABAA
+ABBAA
+AACAA
+ABCAA
+AAABA
+ABABA
+AABBA
+ABBBA
+AACBA
+ABCBA
+AAACA
+ABACA
+AABCA
+ABBCA
+AACCA
+ABCCA
+AAADA
+ABADA
+AABDA
+ABBDA
+AACDA
+ABCDA
+AAAAB
+ABAAB
+AABAB
+ABBAB
+AACAB
+ABCAB
+AAABB
+ABABB
+AABBB
+ABBBB
+AACBB
+ABCBB
+AAACB
+ABACB
+AABCB
+ABBCB
+AACCB
+ABCCB
+AAADB
+ABADB
+AABDB
+ABBDB
+AACDB
+ABCDB
+AAAAC
+ABAAC
+AABAC
+ABBAC
+AACAC
+ABCAC
+AAABC
+ABABC
+AABBC
+ABBBC
+AACBC
+ABCBC
+AAACC
+ABACC
+AABCC
+ABBCC
+AACCC
+ABCCC
+AAADC
+ABADC
+AABDC
+ABBDC
+AACDC
+ABCDC
+AAAAD
+ABAAD
+AABAD
+ABBAD
+AACAD
+ABCAD
+AAABD
+ABABD
+AABBD
+ABBBD
+AACBD
+ABCBD
+AAACD
+ABACD
+AABCD
+ABBCD
+AACCD
+ABCCD
+AAADD
+ABADD
+AABDD
+ABBDD
+AACDD
+ABCDD
+AAAAE
+ABAAE
+AABAE
+ABBAE
+AACAE
+ABCAE
+AAABE
+ABABE
+AABBE
+ABBBE
+AACBE
+ABCBE
+AAACE
+ABACE
+AABCE
+ABBCE
+AACCE
+ABCCE
+AAADE
+ABADE
+AABDE
+ABBDE
+AACDE
+ABCDE
+AAAAAA
+ABAAAA
+AABAAA
+ABBAAA
+AACAAA
+ABCAAA
+AAABAA
+ABABAA
+AABBAA
+ABBBAA
+AACBAA
+ABCBAA
+AAACAA
+ABACAA
+AABCAA
+ABBCAA
+AACCAA
+ABCCAA
+AAADAA
+ABADAA
+AABDAA
+ABBDAA
+AACDAA
+ABCDAA
+AAAABA
+ABAABA
+AABABA
+ABBABA
+AACABA
+ABCABA
+AAABBA
+ABABBA
+AABBBA
+ABBBBA
+AACBBA
+ABCBBA
+AAACBA
+ABACBA
+AABCBA
+ABBCBA
+AACCBA
+ABCCBA
+AAADBA
+ABADBA
+AABDBA
+ABBDBA
+AACDBA
+ABCDBA
+AAAACA
+ABAACA
+AABACA
+ABBACA
+AACACA
+ABCACA
+AAABCA
+ABABCA
+AABBCA
+ABBBCA
+AACBCA
+ABCBCA
+AAACCA
+ABACCA
+AABCCA
+ABBCCA
+AACCCA
+ABCCCA
+AAADCA
+ABADCA
+AABDCA
+ABBDCA
+AACDCA
+ABCDCA
+AAAADA
+ABAADA
+AABADA
+ABBADA
+AACADA
+ABCADA
+AAABDA
+ABABDA
+AABBDA
+ABBBDA
+AACBDA
+ABCBDA
+AAACDA
+ABACDA
+AABCDA
+ABBCDA
+AACCDA
+ABCCDA
+AAADDA
+ABADDA
+AABDDA
+ABBDDA
+AACDDA
+ABCDDA
+AAAAEA
+ABAAEA
+AABAEA
+ABBAEA
+AACAEA
+ABCAEA
+AAABEA
+ABABEA
+AABBEA
+ABBBEA
+AACBEA
+ABCBEA
+AAACEA
+ABACEA
+AABCEA
+ABBCEA
+AACCEA
+ABCCEA
+AAADEA
+ABADEA
+AABDEA
+ABBDEA
+AACDEA
+ABCDEA
